Update MainWindow.java